# cmk

./: Cargo.toml  README.md
examples/ex1/: Cargo.toml  build.rs
examples/ex1/cpplib/: CMakeLists.txt  main.cpp
examples/ex1/src/: main.rs
src/: lib.rs
